# Youtube-Sentiment-Analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  dvc.yaml  flask-requirements.txt  lgbm_model.pkl  params.yaml  pyproject.toml  tfidf_vectorizer.pkl
flask_api/: app.py  client.py
mlruns/0/: meta.yaml
notebooks/: Baseline_Model_experiment.ipynb  Experiment_2_BOW_TFIDF.ipynb  experiment_3_tfidf_(1,3)_max_features.ipynb  experiment_4_handling_imbalanced_dataset.ipynb
src/config/: config.py
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
src/utils/: utils.py
yt-chrome-plugin-frontend/: manifest.json  popup.html  popup.js
