[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlflow",
    "dvc",
    "scikit-learn",
    "pandas",
    "pyyaml",
    "numpy",
    "nltk",
    "lightgbm"
]

[tool.setuptools.packages.find]
where = ["."]